# dotfiles

./: .aliasrc  .gitignore  .luarc.json  .outputrc  .vimrc  .xinitrc  .zshrc  00-keyboard.conf  install.sh  xmonad-session  xmonad.hs
.config/alacritty/: alacritty.yml
.config/bspwm/: bspwmrc
.config/ghostty/: config
.config/kmonad/: config.kbd
.config/mpd/: mpd.conf
.config/ncmpcpp/: config  cover.sh  cover_obs.sh  tsession
.config/nvim/: init.lua  init.vim  lazy-lock.json  nvim-pack-lock.json  wget-log
.config/nvim/colors/: rusty.vim
.config/nvim/lua/: builtin.lua  lsp_config.lua  plugins.lua  settings.lua  wget-log
.config/nvim/plugin/: bufjump.lua  grapper.lua  gruvbox.lua  hlchunk.lua  leap.lua  lensline.lua  lspconfig.lua  lualine.lua  multicursors.lua  packer_compiled.lua  plenary.lua  pretty_hover.lua  render-markdown.lua  snacks.lua  tiny-line-diagnostic.lua  treesitter.lua  (+1 more)
.config/picom/: picom.conf
.config/polybar/: config  config.ini  crypto-config  polybar-crypto.ts
.config/qutebrowser/: autoconfig.yml  config.py  quickmarks
.config/sxhkd/: sxhkdrc_bspwm
.config/xmonad/: cabal.project  hie.yaml  xmonad-aleryberry.cabal  xmonad.cabal  xmonad.hs
.config/zsh/: .zshrc
alacritty/: alacritty.yml
berry/: autostart
bspwm/: bspwmrc
lightdm/: lightdm-webkit2-greeter.conf  lightdm.conf
lua/: lsp_config.lua
mpd/: mpd.conf  mpdstate
ncmpcpp/: config  cover_obs.sh  tsession
nvim/: init.vim
nvim/lua/: lsp_config.lua
pacman/: pacman.conf
polybar/: config
qutebrowser/: config.py
qutebrowser/bookmarks/: urls
qutebrowser/qsettings/: QtProject.conf
sxhkd/: sxhkdrc_bspwm
xmonad/: xmonad.hs
(+24 files in other folders)
