cabal-version:      2.4
name:               my-xmonad-config
version:            0.1.0.0
synopsis:           My personal XMonad configuration
build-type:         Simple

common warnings
    ghc-options: -Wall -threaded 

executable xmonad
    main-is:          xmonad.hs
    build-depends:
        base,
        xmonad,
        xmonad-contrib,
        containers,
        ghc,
        time,
        process
    hs-source-dirs:   .
    default-language: Haskell2010
